syntax = "proto2";
import "ssl_detection.proto";
import "ssl_geometry.proto";

message SSL_WrapperPacket {
  optional SSL_DetectionFrame detection = 1;
  optional SSL_GeometryData geometry = 2;
}
